#5788 Addressed many warnings. Most noteworthy changes: - removed "ChapterList" which was unused and had a serious implementation flaw, as identified by a warning - switched to try-with-resources everywhere