@@ -33,6 +33,7 @@ public class TreeJModelicaRunner extends ParentRunner<TreeModuleRunner> {
     public static final String MODELICA_EXT = ".mo";
 
     public static final FilenameFilter MODELICA_FILES = new FilenameFilter() {
+        @Override
         public boolean accept(File dir, String name) {
             return name.endsWith(MODELICA_EXT);
         }
@@ -40,12 +41,12 @@ public class TreeJModelicaRunner extends ParentRunner<TreeModuleRunner> {
 
     private List<TreeModuleRunner> children;
 
-    public TreeJModelicaRunner(Class testClass) throws InitializationError {
+    public TreeJModelicaRunner(Class<?> testClass) throws InitializationError {
         super(testClass);
         if (TestSpecification.class.isAssignableFrom(testClass)) {
             try {
                 UniqueNameCreator nc = new UniqueNameCreator();
-                TestSpecification spec = (TestSpecification) testClass.newInstance();
+                TestSpecification spec = (TestSpecification) testClass.getDeclaredConstructor().newInstance();
                 children = new ArrayList<TreeModuleRunner>();
                 for (File f : spec.getModuleDirs()) {
                     File testDir = new File(f, TEST_SUB_PATH);
@@ -63,14 +64,17 @@ public class TreeJModelicaRunner extends ParentRunner<TreeModuleRunner> {
         }
     }
 
+    @Override
     public Description describeChild(TreeModuleRunner mod) {
         return mod.getDescription();
     }
 
+    @Override
     public List<TreeModuleRunner> getChildren() {
         return children;
     }
 
+    @Override
     public void runChild(TreeModuleRunner mod, RunNotifier note) {
         mod.run(note);
     }
